<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntentsTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_subject">Enter subject</string>
    <string name="send_mail">Send mail</string>
    <string name="enter_text">Enter text</string>
    <string name="attach_image">Attach image</string>
    
</resources>
